src/syntax_analysis/expressions/if_expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__if_expression__tests__test_syntax_analysis_for_if_expression_case1.snap
---
source: src/syntax_analysis/expressions/if_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "IF": {
            "condition": {
              "INFIX": {
                "left_hand": {
                  "IDENTIFIER": {
                    "identifier_token": {
                      "IDENTIFIER": {
                        "literal": "x"
                      }
                    }
                  }
                },
                "operator_token": "LESSER_THAN",
                "right_hand": {
                  "IDENTIFIER": {
                    "identifier_token": {
                      "IDENTIFIER": {
                        "literal": "y"
                      }
                    }
                  }
                }
              }
            },
            "consequence": {
              "nodes": [
                {
                  "EXPRESSION": {
                    "expression": {
                      "IDENTIFIER": {
                        "identifier_token": {
                          "IDENTIFIER": {
                            "literal": "x"
                          }
                        }
                      }
                    }
                  }
                }
              ]
            },
            "alternative": null
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
